@@ -1,3 +1,9 @@
+2010-09-14  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* Glasses/GTSurf.cxx:
+	* Glasses/GTSurf.h:
+	Add functions for getting volume and area of surface.
+
 2010-09-13  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* GTS/GTS.cxx:
